--- a/app/views/treasures/index.html.erb
+++ b/app/views/treasures/index.html.erb
@@ -1,1 +1,7 @@
 <h1>List of treasures:</h1>
+<ul id = "treasures">
+   <% @treasures.each do |t| %>
+   <li><%= link_to t.title, {:action => 'index', :id => t.id} -%>:
+    <%= link_to t.type.name, {:action => 'index', :id => t.id} -%> </li>
+   <% end %>
+</ul>
