--- a/app/views/treasures/index.html.erb
+++ b/app/views/treasures/index.html.erb
@@ -1,7 +1,8 @@
 <h1>List of treasures:</h1>
+
 <ul id = "treasures">
-   <% @treasures.each do |t| %>
-   <li><%= link_to t.title, {:action => 'index', :id => t.id} -%>:
-    <%= link_to t.type.name, {:action => 'index', :id => t.id} -%> </li>
-   <% end %>
+  <% @treasures.each do |t| %>
+    <li><%= link_to t.title, {:action => 'show', :id => t.id} -%>:
+    <%= link_to t.type.name, {:action => 'show', :id => t.id} -%> </li>
+  <% end %>
 </ul>
