--- a/app/views/treasures/show.html.erb
+++ b/app/views/treasures/show.html.erb
@@ -1,14 +1,27 @@
-<h1><%= @treasure.title %></h1>
+<! DOCTYPE HTML>
 
-<p>
-  <strong>Owner: </strong> <%= @treasure.owner.first_name %><br />
-  <strong>Type:</strong> <%= @treasure.type.name %><br />
-  <strong>Trashed: </strong> <%= @treasure.trashed %><br />
-  <strong>Title:</strong> <%= @treasure.title %><br />
-  <strong>Description:</strong> <%= @treasure.description %><br />
-  <strong>Special note:</strong> <%= @treasure.special_note %><br />
-</p>
+<html lang="en">
+<head>
+  <title>Web treasures</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
+</head>
 
-<hr/>
+<body>
+  <h1><%= @treasure.title %></h1>
 
-<%= link_to 'Back', {:action => 'index'} %>
+  <p>
+    <strong>Owner: </strong> <%= @treasure.owner.first_name %><br />
+    <strong>Type:</strong> <%= @treasure.type.name %><br />
+    <strong>Trashed: </strong> <%= @treasure.trashed %><br />
+    <strong>Title:</strong> <%= @treasure.title %><br />
+    <strong>Description:</strong> <%= @treasure.description %><br />
+    <strong>Special note:</strong> <%= @treasure.special_note %><br />
+  </p>
+
+  <hr/>
+
+  <%= link_to 'Back', {:action => 'index'} %>
+</body>
+</html>
