--- a/app/views/treasures/new.html.erb
+++ b/app/views/treasures/new.html.erb
@@ -1,66 +1,21 @@
-<! DOCTYPE HTML>
+<h1>Add new treasure</h1>
 
-<html lang="en">
-<head>
-  <title>Web treasures</title>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
-</head>
+<%= form_for @treasure do |f| %>
 
-<body>
-  <h1>Add new treasure</h1>
+  <%= render partial: 'form', locals: { f: f } %>
 
-  <%= form_for @treasure do |f| %>
-    <div>
-      <%= f.label :title %>
-      <%= f.text_field :title %>
+  <%= f.submit "Create"%>
+  <% if @treasure.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@treasure.errors.count, "error") %> prohibited this post from being saved:</h2>
+
+      <ul>
+      <% @treasure.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
     </div>
-
-    <div>
-      <%= f.label :type %>
-      <%= f.collection_select :type_id, Type.all, :id, :name %>
-    </div>
-
-    <div>
-      <%= f.label :owner %>
-      <%= f.collection_select :owner_id, User.all, :id, :first_name %>
-    </div>  
-
-    <div>
-      <%= f.label :description %>
-      <%= f.text_field :description %>
-    </div>
-
-    <div>
-      <%= f.label :special_note %>
-      <%= f.text_field :special_note %>
-    </div>
-
-    <div>
-      <%= f.label :storage %>
-      <%= f.collection_select :storage_id, Storage.all, :id, :name %>
-    </div>
-    
-    <div>
-      <%= f.label :trashed %>
-      <%= f.check_box :trashed %>
-    </div>
-
-    <%= f.submit "Create"%>
-    <% if @treasure.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@treasure.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-        <ul>
-          <% @treasure.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-          <% end %>
-        </ul>
-      </div>
-    <% end %>
   <% end %>
+<% end %>
 
-  <%= link_to 'Back', { action: 'index' } %>
-</body>
-</html>
+<%= link_to 'Back', { action: 'index' } %>
