Add edit and update actions for treasure

--- a/app/views/treasures/new.html.erb
+++ b/app/views/treasures/new.html.erb
@@ -6,9 +6,8 @@
 
   <%= f.submit "Create"%>
   <% if @treasure.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@treasure.errors.count, "error") %> prohibited this post from being saved:</h2>
-
+    <div>
+      <h3>Please fix these errors:</h3>
       <ul>
       <% @treasure.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
