--- a/app/views/treasures/show.html.erb
+++ b/app/views/treasures/show.html.erb
@@ -1,5 +1,4 @@
 <h1><%= @treasure.title %></h1>
-
 <p>
   <strong>Owner: </strong> <%= @treasure.owner.try(:first_name) %><br />
   <strong>Type: </strong> <%= @treasure.type.try(:name) %><br />   
@@ -7,8 +6,8 @@
   <strong>Description:</strong> <%= @treasure.description %><br />
   <strong>Special note:</strong> <%= @treasure.special_note %><br />
 </p>
-
 <hr/>
 
 <%= link_to 'Back', { action: 'index' } %>
 <%= link_to 'Edit', { action: 'edit' } %>
+<%= link_to 'Delete', @treasure, method: :delete, data: { confirm: 'Are you sure?' } %>
