--- a/app/views/treasures/index.html.erb
+++ b/app/views/treasures/index.html.erb
@@ -5,7 +5,10 @@
 <% else %>
   <ul>
     <% @treasures.each do |t| %>
-      <li><%= link_to t.title, t %>
+      <% if t.trashed == "0" %>
+        <li><%= link_to t.title, t%>
+        <%= link_to t.type.name, t %>
+      <% end %>
     <% end %>
   </ul>
 <% end %>
