--- a/app/views/treasures/show.html.erb
+++ b/app/views/treasures/show.html.erb
@@ -10,4 +10,4 @@
 
 <%= link_to 'Back', { action: 'index' } %>
 <%= link_to 'Edit', { action: 'edit' } %>
-<%= link_to 'Delete', @treasure, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%= link_to 'Delete', @treasure, method: :trash, data: { confirm: 'Are you sure?' } %>
