--- a/app/views/storages/_form.html.haml
+++ b/app/views/storages/_form.html.haml
@@ -1,6 +1,19 @@
 %div
   = f.label :name
   = f.text_field :name
-%div
-  = f.label :address
-  = f.collection_select :address_id, Address.all, :id, :street
+  = f.fields_for :address do |address_form|
+    %div
+      = address_form.label :street
+      = address_form.text_field :street
+    %div
+      = address_form.label :city
+      = address_form.text_field :city
+    %div
+      = address_form.label :zip_code
+      = address_form.text_field :zip_code     
+      - if @storage.errors.any?
+        %div
+          %h3 Please fix these errors:
+          %ul
+            - @storage.errors.full_messages.each do |msg|
+              %li= msg
