--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,4 +12,5 @@
         = link_to 'My treasures', { action: 'index', controller: 'treasures' }
         = link_to 'My storages', { action: 'index', controller: 'storages' }
         = link_to 'My rentals'
+        = link_to 'Login', { action: 'new', controller: 'sessions'}
     = yield
