Add change typo, and indentations

--- a/app/views/treasures/edit.html.haml
+++ b/app/views/treasures/edit.html.haml
@@ -1,7 +1,7 @@
 %h1 Edit treasure
 = form_for @treasure do |f|
   = render partial: 'form', locals: { f: f }
-  = f.submit "Edit treasure"
+  = f.submit "Edit"
 - if @treasure.errors.any?
   %h3 Please fix these errors:
   %ul
