#36 Add flash messages in apllication layout

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,8 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
+    %div  
+      = render partial: 'sessions/flash_message'
     %nav
       %div
         = link_to 'My treasures', { action: 'index', controller: 'treasures' }
