#37 Add destroy action in sessions_controller

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,4 +15,5 @@
         = link_to 'My storages', { action: 'index', controller: 'storages' }
         = link_to 'My rentals'
         = link_to 'Login', { action: 'new', controller: 'sessions'}
+        = link_to 'Logout', {action: 'destroy', controller: 'sessions'}
     = yield
