--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,6 +14,8 @@
         = link_to 'My treasures', { action: 'index', controller: 'treasures' }
         = link_to 'My storages', { action: 'index', controller: 'storages' }
         = link_to 'My rentals'
-        = link_to 'Login', { action: 'new', controller: 'sessions'}
-        = link_to 'Logout', {action: 'destroy', controller: 'sessions'}
+        - if current_user.nil?
+          = link_to 'Login', { action: 'new', controller: 'sessions'}
+        - else
+          = link_to 'Logout', {action: 'destroy', controller: 'sessions'}
     = yield
