41 Add routes for session and account

--- a/app/views/accounts/new.html.haml
+++ b/app/views/accounts/new.html.haml
@@ -1,5 +1,5 @@
 %h1 Add an account:
-= form_for @account do |f|
+= form_for :account, url: { action: 'create' } do |f|
   %div
     = f.label :email
     = f.text_field :email
