#29 Generate types controller

--- a/app/views/treasures/index.html.haml
+++ b/app/views/treasures/index.html.haml
@@ -9,3 +9,4 @@
         = link_to t.type.name, t
 %p= link_to 'Add new treasure', { action: 'new' }
 %p= link_to 'Trashed treasures', { action: 'trash' }
+%p= link_to 'All available types', {action: 'index', controller: 'types'}
