#30 Generate rentals controller and add new and create actions

--- a/app/views/treasures/index.html.haml
+++ b/app/views/treasures/index.html.haml
@@ -10,3 +10,4 @@
 %p= link_to 'Add new treasure', { action: 'new' }
 %p= link_to 'Trashed treasures', { action: 'trash' }
 %p= link_to 'All available types', {action: 'index', controller: 'types'}
+%p= link_to 'Rent to someone', { action: 'new', controller: 'rentals' }
