#31 Add has many :through associations

--- a/app/views/rentals/index.html.haml
+++ b/app/views/rentals/index.html.haml
@@ -2,7 +2,29 @@
 - if @rentals.blank?
   %p There are not any lend treasures currently in the system.
 - else
-  %p= 'which lend:'
+  %p= 'My treasures lend to someone:'
+  %table.table.table-striped
+    %thead
+      %tr
+        %th Treasure
+        %th Type
+        %th Start date
+        %th Due date
+        %th Returned
+    - @lend_rentals.each do |r|
+      %tbody
+        %tr
+          %td
+            = r.treasure.try(:title)
+          %td
+            = r.treasure.type.try(:name)
+          %td
+            = r.start_date
+          %td
+            = r.due_date
+          %td
+            = r.return_date
+  %p= 'My borrowed treasures:'
   %table.table.table-striped
     %thead
       %tr
@@ -12,42 +34,18 @@
         %th Due date
         %th Returned
     - @rentals.each do |r|
-      -if current_user.id == r.user_id
-        %tbody
-          %tr
-            %td
-              = r.treasure.try(:title)
-            %td
-              = r.treasure.type.try(:name)
-            %td
-              = r.start_date
-            %td
-              = r.due_date
-            %td
+      %tbody
+        %tr
+          %td
+            = r.treasure.try(:title)
+          %td
+            = r.treasure.type.try(:name)
+          %td
+            = r.start_date
+          %td
+            = r.due_date
+          %td
+            - if r.return_date == nil
+              = button_to 'Mark as return', r, { method: :put }
+            - else 
               = r.return_date
-  %p= 'which borrow:'
-  %table.table.table-striped
-    %thead
-      %tr
-        %th Treasure
-        %th Type
-        %th Start date
-        %th Due date
-        %th Returned
-    - @rentals.each do |r|
-      - if current_user.id != r.user_id
-        %tbody
-          %tr
-            %td
-              = r.treasure.try(:title)
-            %td
-              = r.treasure.type.try(:name)
-            %td
-              = r.start_date
-            %td
-              = r.due_date
-            %td
-              - if r.return_date == nil
-                = button_to 'Mark as return', r, { method: :put }
-              - else 
-                = r.return_date
